--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
-    "name": "wordle",
+    "name": "@ngsharsha/wordle",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "World clone for terminal",
+    "exports": "./src/index.js",
     "type": "module",
+    "bin": "./dist/wordle.js",
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "rollup -c"
     },
-    "keywords": [],
-    "author": "",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/HarshaVardhanNakkina/wordle.git"
+    },
+    "keywords": ["wordle", "games"],
+    "author": "N G S HarshaVardhan",
     "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/HarshaVardhanNakkina/wordle/issues"
+    },
+    "homepage": "https://github.com/HarshaVardhanNakkina/wordle#readme",
     "dependencies": {
         "chalk": "^5.0.0",
         "prompts": "^2.4.2"
+    },
+    "devDependencies": {
+        "rollup": "^2.67.0",
+        "rollup-plugin-terser": "^7.0.2"
     }
 }
