--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
     "scripts": {
         "build": "rollup -c",
-        "prepublish": "npm run build",
+        "prepare": "npm run build",
         "publish": "npm publish --access public"
     },
     "repository": {
