--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ngsharsha/wordle",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "World clone for terminal",
     "exports": "./src/index.js",
     "type": "module",
@@ -9,7 +9,7 @@
     "scripts": {
         "build": "rollup -c",
         "prepare": "npm run build",
-        "publish": "npm publish --access public"
+        "publish-package": "npm publish --access public"
     },
     "repository": {
         "type": "git",
