--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
     "name": "@ngsharsha/wordle",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "World clone for terminal",
     "exports": "./src/index.js",
     "type": "module",
-    "bin": "./dist/wordle.js",
+    "bin": "./src/index.js",
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
     "scripts": {
         "build": "rollup -c",
-        "prepare": "npm run build",
         "publish-package": "npm publish --access public"
     },
     "repository": {
